--- a/frontend/pug/pages/layout/_head.pug
+++ b/frontend/pug/pages/layout/_head.pug
@@ -29,6 +29,7 @@ link(rel="dns-prefetch" href="https://fonts.googleapis.com")
 link(rel="dns-prefetch" href="https://fonts.gstatic.com")
 link(rel="preload" href="/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'")
 link(rel="preload" href="/bundle.js" as="script")
+link(rel="preload" href="/service-worker.js" as="script")
 
 link(rel="preload" type="image/x-icon" href=require('../../svg/logo.svg') as="image")
 link(rel="preload" type="image/jpg" href=require('../../img/slide1.jpg') as="image")
