Add footer menu

--- a/frontend/pug/pages/index/_about.pug
+++ b/frontend/pug/pages/index/_about.pug
@@ -1,6 +1,8 @@
 .anchor#about
-.about
+section.about._pbig
   ._container._row
+    h3.about__caption._col-12
+      | О нас
     ._col-12._col-sm-6._col-lg-4._p-n
       article.about__item._row
         .about__icon-box._col-12
