--- a/frontend/pug/pages/index/_gallery.pug
+++ b/frontend/pug/pages/index/_gallery.pug
@@ -1,5 +1,5 @@
 .anchor#gallery
-section.gallery._row
+section.gallery._row._pbig
   h3.gallery__caption._col-12
     | Технологии натяжных потолков
   article.gallery__item._col-12._col-sm-6._col-lg-4._col-xxl-3(data-path="2yr" data-content="1.jpg,2.jpg,3.jpg")
