--- a/frontend/pug/pages/index/_textures.pug
+++ b/frontend/pug/pages/index/_textures.pug
@@ -1,5 +1,5 @@
 .anchor#textures
-section.textures._container._row
+section.textures._container._row._pbig
   h3.textures__caption._col-12
     | Фактуры натяжных потолков
   ._col-12._col-md-6._col-lg-4
