--- a/frontend/pug/pages/layout/_footer.pug
+++ b/frontend/pug/pages/layout/_footer.pug
@@ -1,6 +1,25 @@
 footer.footer
   ._container._row
+    ._col-12._col-md-6._col-lg-4._p-n.footer__col
+      .footer__title
+        | Меню
+      nav.footer__menu
+        ul.footer__menu-list
+          li.footer__menu-item
+            a.link.footer__link(href="#stretch-ceiling" rel="tag") Натяжные потолки
+          li.footer__menu-item
+            a.link.footer__link(href="#about" rel="tag") О нас
+          li.footer__menu-item
+            a.link.footer__link(href="#textures" rel="tag") Фактуры натяжных потолков
+          li.footer__menu-item
+            a.link.footer__link(href="#duration" rel="tag") Уютный интерьер
+          li.footer__menu-item
+            a.link.footer__link(href="#gallery" rel="tag") Технологии натяжных потолков
+          li.footer__menu-item
+            a.link.footer__link(href="#materials" rel="tag") Наши материалы
+    ._col-12._col-md-6._col-lg-8._p-n.footer__map-box
+      a.link.footer__map(href="https://www.google.com/maps/d/edit?mid=1HnQphUfUE8InSyPggZ3sG5L0f-1eU1PL&usp=sharing" target="_blank" rel="noreferrer") Смотреть на карте Крыма
     ._col-12
       | &copy;&nbsp;2020 Grand&nbsp;Comfort.
       |
-      a.link.footer__link Политика конфиденциальности
+      a.link.footer__pol Политика конфиденциальности
