--- a/frontend/pug/sass/lazy.scss
+++ b/frontend/pug/sass/lazy.scss
@@ -1,4 +1,5 @@
 @import "layout/textures";
 @import "layout/duration";
 @import "layout/gallery";
+@import "layout/materials";
 @import "layout/footer";
