--- a/frontend/pug/pages/index/_duration.pug
+++ b/frontend/pug/pages/index/_duration.pug
@@ -1,5 +1,5 @@
 .anchor#duration
-section.duration.lazy-bg
+section.duration.lazy-bg._pbig
   ._container._row._s
     ._col-sm-7._col-md-6._col-lg-5._offset-sm-5._offset-md-6._offset-lg-7
       h4.duration__caption
