--- a/frontend/pug/pages/layout/_head.pug
+++ b/frontend/pug/pages/layout/_head.pug
@@ -11,7 +11,6 @@ link(rel="icon" type="image/x-icon" sizes="16x16" href=require('../../icons/favi
 link(rel="icon" type="image/png" sizes="16x16" href=require('../../icons/favicon-16x16.png'))
 link(rel="icon" type="image/png" sizes="32x32" href=require('../../icons/favicon-32x32.png'))
 link(rel="icon" type="image/svg+xml" sizes="any" href=require('../../icons/mask-icon.svg'))
-link(rel="mask-icon" type="image/svg+xml" sizes="any" href=require('../../icons/mask-icon.svg'))
 link(rel="apple-touch-icon" type="image/png" sizes="180x180" href=require('../../icons/apple-touch-icon-180x180.png'))
 
 meta(name="msapplication-TileColor", content="#fee25f")
@@ -23,10 +22,16 @@ meta(name="mobile-web-app-capable" content="yes")
 meta(name="apple-mobile-web-app-capable" content="yes")
 meta(name="apple-mobile-web-app-title" content="Потолки")
 
-link(rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:300.400,500,600,700,800,900&display=swap&subset=cyrillic" media="all" onload="this.onload=null;this.rel='stylesheet'")
-link(rel="preload" href=require('../../fonts/Linearicons.ttf') as="font" type="font/ttf" media="all" crossorigin)
 link(rel="dns-prefetch" href="https://fonts.googleapis.com")
 link(rel="dns-prefetch" href="https://fonts.gstatic.com")
+link(rel="dns-prefetch" href="https://www.google.com")
+link(rel="dns-prefetch" href="https://www.google-analytics.com")
+link(rel="dns-prefetch" href="https://www.googletagmanager.com")
+link(rel="dns-prefetch" href="https://maps.googleapis.com")
+link(rel="dns-prefetch" href="https://maps.gstatic.com")
+
+link(rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:300.400,500,600,700,800,900&display=swap&subset=cyrillic" as="style" media="all" onload="this.onload=null;this.rel='stylesheet'")
+link(rel="preload" href=require('../../fonts/Linearicons.ttf') as="font" type="font/ttf" media="all" crossorigin)
 link(rel="preload" href="/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'")
 link(rel="preload" href="/bundle.js" as="script")
 link(rel="preload" href="/service-worker.js" as="script")
