--- a/frontend/pug/sass/_media.scss
+++ b/frontend/pug/sass/_media.scss
@@ -34,6 +34,9 @@
       right: 30px;
     }
   }
+  ._pbig {
+    padding: 70px - 15 0;
+  }
 }
 
 /*
@@ -61,6 +64,9 @@
     &__pagination {
       display: none;
     }
+  }
+  ._pbig {
+    padding: 80px - 15 0;
   }
 }
 
