--- a/frontend/pug/pages/layout/_head.pug
+++ b/frontend/pug/pages/layout/_head.pug
@@ -34,7 +34,7 @@ link(rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:300.400,
 link(rel="preload" href=require('../../fonts/Linearicons.ttf') as="font" type="font/ttf" media="all" crossorigin)
 link(rel="preload" href="/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'")
 link(rel="preload" href="/bundle.js" as="script")
-link(rel="preload" href="/service-worker.js" as="script")
+link(rel="preload" href="/service-worker.js" as="worker")
 
 link(rel="preload" type="image/x-icon" href=require('../../svg/logo.svg') as="image")
 link(rel="preload" type="image/jpg" href=require('../../img/slide1.jpg') as="image")
@@ -57,3 +57,12 @@ link(rel="preload" type="image/jpg" href=require('../../img/polu/0.jpg') as="ima
 link(rel="preload" type="image/jpg" href=require('../../img/ppoz/0.jpg') as="image")
 link(rel="preload" type="image/jpg" href=require('../../img/ten/0.jpg') as="image")
 link(rel="preload" type="image/jpg" href=require('../../img/tkan/0.jpg') as="image")
+
+link(rel="preload" type="image/jpg" href=require('../../img/logo/logo1.jpg') as="image")
+link(rel="preload" type="image/jpg" href=require('../../img/logo/logo2.jpg') as="image")
+link(rel="preload" type="image/jpg" href=require('../../img/logo/logo3.jpg') as="image")
+link(rel="preload" type="image/jpg" href=require('../../img/logo/logo4.jpg') as="image")
+link(rel="preload" type="image/jpg" href=require('../../img/logo/logo5.jpg') as="image")
+link(rel="preload" type="image/jpg" href=require('../../img/logo/logo6.jpg') as="image")
+link(rel="preload" type="image/jpg" href=require('../../img/map.jpg') as="image")
+link(rel="preload" type="image/x-icon" href=require('../../svg/check.svg') as="image")
