--- a/frontend/pug/pages/layout/_head.pug
+++ b/frontend/pug/pages/layout/_head.pug
@@ -10,13 +10,13 @@ link(rel="shortcut icon" type="image/x-icon" sizes="16x16" href=require('../../i
 link(rel="icon" type="image/x-icon" sizes="16x16" href=require('../../icons/favicon.ico'))
 link(rel="icon" type="image/png" sizes="16x16" href=require('../../icons/favicon-16x16.png'))
 link(rel="icon" type="image/png" sizes="32x32" href=require('../../icons/favicon-32x32.png'))
-link(rel="icon" type="image/svg+xml" sizes="any" href=require('../../icons/mask-icon.svg'))
+link(rel="icon" type="image/svg+xml" sizes="any" href=require('../../icons/mask-icon.svg') color="#ff5200")
 link(rel="apple-touch-icon" type="image/png" sizes="180x180" href=require('../../icons/apple-touch-icon-180x180.png'))
 
-meta(name="msapplication-TileColor", content="#fee25f")
+meta(name="msapplication-TileColor", content="#ff5200")
 meta(name="msapplication-TileImage", content=require('../../icons/ms-icon-144x144.png'))
 
-meta(name="theme-color" content="#fee25f")
+meta(name="theme-color" content="#ffffff")
 
 meta(name="mobile-web-app-capable" content="yes")
 meta(name="apple-mobile-web-app-capable" content="yes")
